Change JDK to 11 and update code to adjust for new JDK features.